[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/menu/pause_menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui_elements/Menu/Buttons/Play.png" type="Texture" id=2]
[ext_resource path="res://ui_elements/Menu/Buttons/close.png" type="Texture" id=3]
[ext_resource path="res://scenes/menu/pause_menu.gd" type="Script" id=4]
[ext_resource path="res://scenes/menu/menu.tres" type="TileSet" id=5]
[ext_resource path="res://ui_elements/Menu/Buttons/Restart.png" type="Texture" id=6]

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backgound" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.388235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 416, 376.5 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 415.75, 436.5 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 415.75, 497.5 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="text" type="Node2D" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 2, 2 )

[node name="TileMap" type="TileMap" parent="text"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 10, 10 )
format = 1
tile_data = PoolIntArray( 851988, 0, 15, 851990, 0, 0, 851992, 0, 20, 851994, 0, 18, 851996, 0, 4, 851998, 0, 3, 1179670, 0, 17, 1179671, 0, 4, 1179672, 0, 0, 1179673, 0, 18, 1179674, 0, 20, 1179675, 0, 12, 1179676, 0, 4, 1376278, 0, 16, 1376280, 0, 20, 1376282, 0, 8, 1376284, 0, 19, 1572886, 0, 17, 1572887, 0, 4, 1572888, 0, 18, 1572889, 0, 19, 1572890, 0, 0, 1572891, 0, 17, 1572892, 0, 19 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 440.0
margin_top = 257.0
margin_right = 584.0
margin_bottom = 511.0
custom_constants/separation = 37

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 144.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
align = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 144.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 9 )
align = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 144.0
margin_bottom = 134.0
text = "                      "
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 144.0
margin_bottom = 194.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 231.0
margin_right = 144.0
margin_bottom = 254.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
